{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 22,
  "lineage": "6f1fbea4-a2e6-1a43-204a-7b87fbb19f0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Demo_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:402856767392:instance/i-0148fca81dd965e1c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0148fca81dd965e1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07bb881720beeae4c",
            "private_dns": "ip-172-0-0-53.us-east-2.compute.internal",
            "private_ip": "172.0.0.53",
            "public_dns": "ec2-18-117-78-209.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.78.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d2c7010f91e0c76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a295130f434d7b7",
            "tags": {
              "Name": "UbuntuServer",
              "Type": "Docker"
            },
            "tags_all": {
              "Name": "UbuntuServer",
              "Type": "Docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c84550e65981ef0c"
            ]
          },
          "dependencies": [
            "aws_security_group.demo_sg",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redhat_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba62214afa52bec7",
            "arn": "arn:aws:ec2:us-east-2:402856767392:instance/i-0e22c1cf2386a80f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e22c1cf2386a80f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bdec9f1e3e340b3a",
            "private_dns": "ip-172-0-0-5.us-east-2.compute.internal",
            "private_ip": "172.0.0.5",
            "public_dns": "ec2-18-116-89-187.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.89.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd088296d75d601b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a295130f434d7b7",
            "tags": {
              "Name": "Redhat_Server_1"
            },
            "tags_all": {
              "Name": "Redhat_Server_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c84550e65981ef0c"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_security_group.demo_sg",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba62214afa52bec7",
            "arn": "arn:aws:ec2:us-east-2:402856767392:instance/i-028b4118c67a9cc4e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028b4118c67a9cc4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014cbc27c88ae9cec",
            "private_dns": "ip-172-0-0-242.us-east-2.compute.internal",
            "private_ip": "172.0.0.242",
            "public_dns": "ec2-3-15-230-229.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.230.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f685c1930531c38e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069ae9d3438d1539c",
            "tags": {
              "Name": "Redhat_Server_2"
            },
            "tags_all": {
              "Name": "Redhat_Server_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c84550e65981ef0c"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_security_group.demo_sg",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:402856767392:internet-gateway/igw-0a1877f4bb7a40a78",
            "id": "igw-0a1877f4bb7a40a78",
            "owner_id": "402856767392",
            "tags": {
              "Name": "demo_vpc_igw"
            },
            "tags_all": {
              "Name": "demo_vpc_igw"
            },
            "vpc_id": "vpc-0839ee33fb1b67552"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:402856767392:route-table/rtb-07b74afc91bad0f52",
            "id": "rtb-07b74afc91bad0f52",
            "owner_id": "402856767392",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1877f4bb7a40a78",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_vpc_public_rt"
            },
            "tags_all": {
              "Name": "demo_vpc_public_rt"
            },
            "vpc_id": "vpc-0839ee33fb1b67552"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46c0071285864f2",
            "route_table_id": "rtb-07b74afc91bad0f52",
            "subnet_id": "subnet-05a295130f434d7b7"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5092097f5379485",
            "route_table_id": "rtb-07b74afc91bad0f52",
            "subnet_id": "subnet-069ae9d3438d1539c"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:402856767392:security-group/sg-0c84550e65981ef0c",
            "description": "Allow All Ports and All Protocols",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c84550e65981ef0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow_All_Ports",
            "name_prefix": "",
            "owner_id": "402856767392",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0839ee33fb1b67552"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:402856767392:subnet/subnet-05a295130f434d7b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.0.0.0/25",
            "id": "subnet-05a295130f434d7b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "402856767392",
            "tags": {
              "Name": "demo_vpc_subnet_1"
            },
            "tags_all": {
              "Name": "demo_vpc_subnet_1"
            },
            "vpc_id": "vpc-0839ee33fb1b67552"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:402856767392:subnet/subnet-069ae9d3438d1539c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.0.0.128/25",
            "id": "subnet-069ae9d3438d1539c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "402856767392",
            "tags": {
              "Name": "demo_vpc_subnet_2"
            },
            "tags_all": {
              "Name": "demo_vpc_subnet_2"
            },
            "vpc_id": "vpc-0839ee33fb1b67552"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:402856767392:vpc/vpc-0839ee33fb1b67552",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/24",
            "default_network_acl_id": "acl-0e1d3427f3968ac50",
            "default_route_table_id": "rtb-0c6fcbd471d496f52",
            "default_security_group_id": "sg-020d5e62edc2cae3f",
            "dhcp_options_id": "dopt-2cddb947",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0839ee33fb1b67552",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c6fcbd471d496f52",
            "owner_id": "402856767392",
            "tags": {
              "Name": "demo_vpc"
            },
            "tags_all": {
              "Name": "demo_vpc"
            }
          }
        }
      ]
    }
  ]
}